stop icon buttons from shrinking on small devices

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ body {
   height: 1.5rem;
   justify-content: center;
   transition: background-color 300ms ease-in-out;
+  flex-shrink: 0;
 }
 
 .vertical-line {
